<resources>
    <string name="app_name">SendUser</string>

    <!--ACTIVITY : MainActivity LAYOU: activity_main.xml-->
    <string name="seleccionar_contacto">SELECCIONAR CONTACTO</string>
    <string name="nombre">Nombre</string>
    <string name="telefono">Teléfono</string>
    <string name="enviar">ENVIAR</string>
    <string name="descripcion_imagen">Es la imagen del contacto selecionado</string>

</resources>
