<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="16dp"
    tools:context="mx.com.develop.contentprovider.MainActivity">

    <Button
        android:id="@+id/btn_seleccionar_contacto"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimary"
        android:text="@string/seleccionar_contacto"
        android:textColor="@android:color/white"
        android:textSize="20sp" />

    <LinearLayout
        android:id="@+id/ll_contacto"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/btn_seleccionar_contacto"
        android:layout_marginTop="16dp"
        android:orientation="vertical">

        <TextView
            android:id="@+id/tv_nombre"
            android:layout_width="246dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:text="@string/nombre"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/tv_telefono"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:text="@string/telefono"
            android:textSize="20sp" />

    </LinearLayout>

    <ImageView
        android:id="@+id/iv_contacto"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_alignParentEnd="true"
        android:contentDescription="@string/descripcion_imagen"
        android:layout_alignTop="@+id/ll_contacto"
        app:srcCompat="@drawable/ic_plantilla_imagen" />

    <Button
        android:id="@+id/btn_enviar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/iv_contacto"
        android:layout_marginTop="16dp"
        android:background="@color/colorPrimary"
        android:text="@string/enviar"
        android:textColor="@android:color/white"
        android:textSize="20sp" />

</RelativeLayout>
